Bug 342249 - KGpg does not understand gpg's IMPORT_RES message
Summary: KGpg does not understand gpg's IMPORT_RES message
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.13.1
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
: 352910 (view as bug list)
Depends on:
Blocks: 340676
  Show dependency treegraph
 
Reported: 2014-12-27 14:04 UTC by Tim Ruffing
Modified: 2015-09-19 15:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 14.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Ruffing 2014-12-27 14:04:03 UTC
When updating any key in KGpg, the operations succeeds, but I get the following message:
 
The import result string has an unsupported format in line 2.
Please see the detailed log for more information.

Details:
[GNUPG:] IMPORT_OK 0 53748A4029AE1B6A56BBB164A026540B4F26687B
[GNUPG:] IMPORT_RES 1 0 0 0 1 0 0 0 0 0 0 0 0 0 0

This could be related to gpg 2.1:
> gpg --version
gpg (GnuPG) 2.1.1
libgcrypt 1.6.2
Comment 1 Rolf Eike Beer 2014-12-27 18:38:08 UTC
Git commit dfd166f04c2567133f06c1963f69dbdcb0a94030 by Rolf Eike Beer.
Committed on 27/12/2014 at 18:36.
Pushed by dakon into branch 'Applications/14.12'.

fix importing keys using GnuPG 2.1

More fields at the end of GnuPG output may be introduced in new implementations
and should just be ignored if they are not explicitely handled.
FIXED-IN:14.12.1

M  +1    -1    transactions/kgpgimport.cpp

http://commits.kde.org/kgpg/dfd166f04c2567133f06c1963f69dbdcb0a94030
Comment 2 Tim Ruffing 2014-12-27 23:56:32 UTC
Thanks. :)
Comment 3 Luke-Jr 2015-09-19 15:40:10 UTC
*** Bug 352910 has been marked as a duplicate of this bug. ***