fix importing keys using GnuPG 2.1

More fields at the end of GnuPG output may be introduced in new implementations
and should just be ignored if they are not explicitely handled.

BUG:342249
FIXED-IN:14.12.1